# GAnyUnity

./: CMakeLists.txt  README-zh.md  README.md
examples/TestGAny/: .gitignore
examples/TestGAny/Assets/Scenes/: SampleScene.unity
examples/TestGAny/Assets/Scripts/: GameMain.cs
examples/TestGAny/ProjectSettings/: ProjectSettings.asset
src/Scripts/: GAny.cs  GAnyIteratorItem.cs  GAnyNative.cs  GAnyPlugin.cs  GAnyUnity.asmdef
src/gany-unity/include/gx/: gany_c_api.h
src/gany-unity/src/: gany_unity.cpp
